--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -1,6 +1,6 @@
 section{
     padding: 10px;
-    background-color: lightgray;
+    background-color: rgb(88, 88, 230);
     display: flex;
     align-content: center;
     justify-content: space-between;
