--- a/src/app/main/main.component.scss
+++ b/src/app/main/main.component.scss
@@ -4,8 +4,31 @@ section {
     width: 100vw;
     overflow-x: hidden;
     font-family: cursive;
+    background-color: lightblue;
 
-    button{
+    &.backgroundcolorBlack {
+        background-color: black;
+    }
+
+    ;
+
+    img {
+        height: 80px;
+        width: 80px;
+        position: absolute;
+        left: 20px;
+        bottom: 20px;
+        cursor: pointer;
+    
+        &.backgroundYellow {
+            -webkit-filter: brightness(1.2) saturate(2) hue-rotate(60deg);
+            filter: brightness(1.2) saturate(2) hue-rotate(60deg);
+        }
+    }
+    
+
+
+    button {
         position: absolute;
         bottom: 20px;
         right: 20px;
@@ -34,7 +57,7 @@ section {
             animation: moveToTopRight 0.5s ease-in-out forwards;
         }
     }
-    
+
 
     app-correct-and-incorrect {
         position: absolute;
@@ -46,15 +69,17 @@ section {
         width: 0px;
     }
 
-    .vokabel-complete{
+    .vokabel-complete {
         position: absolute;
         top: 30%;
         left: 50%;
         transform: translate(-50%, -50%);
-        h1{
+
+        h1 {
             cursor: pointer;
         }
-        h2{
+
+        h2 {
             cursor: pointer;
         }
 
@@ -83,27 +108,30 @@ section {
         }
     }
 
-@keyframes moveToTopRight {
-    0% {
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%) rotate(0deg);
-        opacity: 1; /* Anfänglich sichtbar */
-    }
+    @keyframes moveToTopRight {
+        0% {
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%) rotate(0deg);
+            opacity: 1;
+            /* Anfänglich sichtbar */
+        }
 
-    80% {
-        top: 0px;
-        right: 0px;
-        transform: translate(0%, 0%) rotate(10deg);
-        opacity: 1; /* Sichtbar während der Bewegung */
-    }
+        80% {
+            top: 0px;
+            right: 0px;
+            transform: translate(0%, 0%) rotate(10deg);
+            opacity: 1;
+            /* Sichtbar während der Bewegung */
+        }
 
-    100% {
-        top: 0px;
-        right: 0px;
-        transform: translate(0%, 0%) rotate(10deg);
-        opacity: 0; /* Unsichtbar am Ende der Animation */
+        100% {
+            top: 0px;
+            right: 0px;
+            transform: translate(0%, 0%) rotate(10deg);
+            opacity: 0;
+            /* Unsichtbar am Ende der Animation */
+        }
     }
-}
 
 }
