--- a/src/app/vokabeln-fragen/vokabeln-fragen.component.html
+++ b/src/app/vokabeln-fragen/vokabeln-fragen.component.html
@@ -1,20 +1,19 @@
 <section>
-    <div *ngFor="let vokabel of (vokabeln$ | async); let i = index" [hidden]="i !== currentIndex">
-        <div class="sprachen">
-          <h2>{{ vokabel.myLearnedWord }}</h2>
-        </div>
-        <div class="sprachen" *ngIf="vokabelnService.englisch">
-          <h2>{{ vokabel.myLanguage }}</h2>
-        </div>
-
-        <div *ngIf="!vokabelnService.englisch">
-            <svg (click)="vokabelnService.schaueVokabel(vokabel.id)" xmlns="http://www.w3.org/2000/svg" height="24px"
-                viewBox="0 -960 960 960" width="24px" fill="#5f6368">
-                <path d="M480-80 200-360l56-56 184 183v-647h80v647l184-184 56 57L480-80Z" />
-            </svg>
-        </div>
-        <app-correct-and-incorrect 
-        [vokabel]="vokabel">
-    </app-correct-and-incorrect>
+  <div *ngFor="let vokabel of (vokabeln$ | async); let i = index" [hidden]="i !== currentIndex">
+    <div class="sprachen">
+      <h2>{{ vokabel.myLearnedWord }}</h2>
     </div>
+    <div class="sprachen" *ngIf="vokabelnService.englisch">
+      <h2>{{ vokabel.myLanguage }}</h2>
+    </div>
+
+    <div *ngIf="!vokabelnService.englisch">
+      <svg (click)="vokabelnService.schaueVokabel(vokabel.id)" xmlns="http://www.w3.org/2000/svg" height="24px"
+        viewBox="0 -960 960 960" width="24px" fill="#5f6368">
+        <path d="M480-80 200-360l56-56 184 183v-647h80v647l184-184 56 57L480-80Z" />
+      </svg>
+    </div>
+    <app-correct-and-incorrect [vokabel]="vokabel">
+    </app-correct-and-incorrect>
+  </div>
 </section>
