--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -1,4 +1,4 @@
-<section [class.backgroundcolorBlack]="backgroundBlack">
+<section [class.backgroundcolorBlack]="vokabelnService.backgroundBlack">
     <app-header></app-header>
 
     <div class="smiley">
@@ -17,15 +17,15 @@
         <app-vokabeln-fragen></app-vokabeln-fragen>
 
     </div>
-    <div *ngIf="vokabelnEmpty" class="vokabel-complete">
+    <div *ngIf="vokabelnEmpty" class="vokabel-complete"[class.textWhith]="vokabelnService.backgroundBlack">
         <h1>Alle Vokabeln bearbeitet!</h1>
         <h2 (click)="vokabelnService.allVokabelnRestore()">Alle Vokabeln neu abfragen!</h2>
         <h2 (click)="vokabelnService.incorrectVokabelnReload()">Alle falschen Vokabeln abfragen!</h2>
     </div>
     
-    <div [class.backgroundcolorBlack]="isYellow">
-        <img src="assets/img/the-light-bulb-349399_1280.png" alt="" (click)="toggleBackground()">
-      </div>
+    
+        <img src="assets/img/the-light-bulb-349399_1280.png" alt="" (click)="toggleBackground()"  [class.backgroundYellow]="vokabelnService.backgroundBlack">
+     
 
     <button mat-fab aria-label="Example icon button with a delete icon"
         (click)="vokabelnService.openDialogAddVokabel()">
