--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -5,6 +5,7 @@ section{
     align-content: center;
     justify-content: space-between;
     align-items: center;
+    font-family: cursive,Arial, Helvetica, sans-serif;
 .mat-menu{
     width: 300px;
     background-color: lightblue;
