--- a/src/app/main/main.component.scss
+++ b/src/app/main/main.component.scss
@@ -5,6 +5,7 @@ section {
     overflow-x: hidden;
     font-family: cursive;
     background-color: lightblue;
+    font-family: cursive, Arial, Helvetica, sans-serif;
 
     &.backgroundcolorBlack {
         background-color: black;
