--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,7 +1,8 @@
 *{
     margin: 0px;
+    font-family: cursive ,Arial, Helvetica, sans-serif;
 
 }
 
 html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+body { margin: 0; font-family: cursive,Roboto, "Helvetica Neue", sans-serif; }
