--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -12,9 +12,9 @@
             <mat-icon>voicemail</mat-icon>
             <span>Check voice mail</span>
         </button>
-        <button mat-menu-item>
-            <mat-icon>notifications_off</mat-icon>
-            <span>Disable alerts</span>
+        <button mat-menu-item (click)="logOut()">
+            <mat-icon>logout</mat-icon>
+            <span >Log out</span>
         </button>
     </mat-menu>
 
