--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -2,25 +2,30 @@
     <app-header></app-header>
     <div class="loggin">
         <mat-form-field>
-            <mat-label>Benutzername</mat-label>
-            <input matInput>
+            <mat-label>E-Mail</mat-label>
+            <input matInput [(ngModel)]="email" name="email" type="email" required #emailModel="ngModel" />
+
+            <!-- Fehleranzeige wenn die E-Mail ungültig ist oder das Feld berührt wurde -->
+            <mat-error *ngIf="emailModel.invalid && (emailModel.dirty || emailModel.touched)">
+                E-Mail-Adresse eingeben.
+            </mat-error>
         </mat-form-field>
+
         <mat-form-field>
             <mat-label>Passwort</mat-label>
-            <input matInput>
+            <input matInput [(ngModel)]="password" type="password" />
         </mat-form-field>
         <div class="example-button-row">
             <button mat-raised-button (click)="loggin()">Anmelden</button>
             <button mat-raised-button (click)="vokabelnService.openDialogRegister()">Registrieren</button>
+            
+        </div>
+        <div class="example-button-row">
+            <button (click)="gastLoggin()" mat-raised-button>Als Gast Anmelden</button>
         </div>
 
         <div class="no-account">
             <h2 (click)="vokabelnService.openDialogRegister()">Noch kein Account?</h2>
         </div>
-
-
     </div>
-
-
-
 </section>
