--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -16,6 +16,7 @@ section {
 
         .example-button-row {
             gap: 20px;
+            margin-bottom: 20px;
 
             button {
                 background: rgb(88, 88, 230);
