--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -1,20 +1,22 @@
 <h2 mat-dialog-title>Registrierung</h2>
 <mat-dialog-content>
-    <!-- Hier kommt dein Registrierungsformular -->
-    <mat-form-field>
-        <mat-label>Benutzername</mat-label>
-        <input matInput />
-    </mat-form-field>
-    <mat-form-field>
-        <mat-label>Passwort</mat-label>
-        <input matInput type="password" />
-    </mat-form-field>
-    <mat-form-field>
-        <mat-label>E-Mail</mat-label>
-        <input matInput>
-    </mat-form-field>
+  <mat-form-field>
+    <mat-label>Benutzername</mat-label>
+    <input matInput [(ngModel)]="username" />
+  </mat-form-field>
+
+  <mat-form-field>
+    <mat-label>E-Mail</mat-label>
+    <input matInput [(ngModel)]="email" />
+  </mat-form-field>
+
+  <mat-form-field>
+    <mat-label>Passwort</mat-label>
+    <input matInput type="password" [(ngModel)]="password" />
+  </mat-form-field>
 </mat-dialog-content>
+
 <mat-dialog-actions>
-    <button mat-button mat-dialog-close>Schließen</button>
-    <button mat-button>Registrieren</button>
+  <button mat-button mat-dialog-close>Schließen</button>
+  <button mat-button (click)="registerUser()">Registrieren</button>
 </mat-dialog-actions>
