--- a/src/app/vokabeln-fragen/vokabeln-fragen.component.scss
+++ b/src/app/vokabeln-fragen/vokabeln-fragen.component.scss
@@ -1,7 +1,7 @@
 section{
     height: 200px;
     width: 300px;
-    background-color: lightgray;
+    background-color: rgba(211, 211, 211, 0.9); 
     display: flex;
     align-items: center;
     justify-content: center;
