--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -1,22 +1,33 @@
 <h2 mat-dialog-title>Registrierung</h2>
+
+<!-- Das Formular um das Eingabefeld wickeln -->
 <mat-dialog-content>
-  <mat-form-field>
-    <mat-label>Benutzername</mat-label>
-    <input matInput [(ngModel)]="username" />
-  </mat-form-field>
+  <form (ngSubmit)="registerUser()">
+    
+    <mat-form-field>
+      <mat-label>Benutzername</mat-label>
+      <input matInput [(ngModel)]="username" name="username" required style="text-transform: capitalize;" />
+    </mat-form-field>
+    
 
-  <mat-form-field>
-    <mat-label>E-Mail</mat-label>
-    <input matInput [(ngModel)]="email" />
-  </mat-form-field>
+    <mat-form-field>
+      <mat-label>E-Mail</mat-label>
+      <input matInput [(ngModel)]="email" name="email" required [pattern]="'^[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\.[a-zA-Z]{2,}$'" />
+      <mat-error *ngIf="!email?.match('^[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\.[a-zA-Z]{2,}$')">Bitte geben Sie eine gültige E-Mail-Adresse ein.</mat-error>
+    </mat-form-field>
+    
 
-  <mat-form-field>
-    <mat-label>Passwort</mat-label>
-    <input matInput type="password" [(ngModel)]="password" />
-  </mat-form-field>
+    <mat-form-field>
+      <mat-label>Passwort</mat-label>
+      <input matInput type="password" [(ngModel)]="password" name="password" required minlength="5" />
+      <mat-error *ngIf="password.length < 5">Das Passwort muss mindestens 6 Zeichen lang sein.</mat-error>
+    </mat-form-field>
+    
+  </form>
 </mat-dialog-content>
 
 <mat-dialog-actions>
   <button mat-button mat-dialog-close>Schließen</button>
-  <button mat-button (click)="registerUser()">Registrieren</button>
+  <!-- Der Button wird nur aktiviert, wenn das Formular gültig ist -->
+  <button mat-button type="submit" [disabled]="!username || !email || !password" (click)="registerUser()">Registrieren</button>
 </mat-dialog-actions>
