--- a/src/app/main/main.component.scss
+++ b/src/app/main/main.component.scss
@@ -7,7 +7,6 @@ section {
     background-color: lightblue;
     background-image: url('/assets/img/book-4109187_1280.png');
     background-repeat: no-repeat;
-    /* verhindert Wiederholung */
     background-position: center;
     font-family: cursive, Arial, Helvetica, sans-serif;
 
@@ -170,47 +169,44 @@ section {
             top: 50%;
             left: 50%;
             transform: translate(-50%, -50%) rotate(0deg);
-            opacity: 1; // Anfänglich sichtbar
+            opacity: 1;
         }
-
+    
         80% {
-            top: 0px;
-            left: 10px;
+            top: 0;
+            left: 0;
             transform: translate(0, 0) rotate(-10deg);
-            opacity: 1; // Sichtbar während der Bewegung
+            opacity: 1;
         }
-
+    
         100% {
-            top: 0px;
-            left: 10px;
+            top: 0;
+            left: 0;
             transform: translate(0, 0) rotate(-10deg);
-            opacity: 0; // Unsichtbar am Ende der Animation
+            opacity: 0;
         }
     }
-
+    
     @keyframes moveToTopRight {
         0% {
             top: 50%;
             left: 50%;
             transform: translate(-50%, -50%) rotate(0deg);
             opacity: 1;
-            /* Anfänglich sichtbar */
         }
-
+    
         80% {
-            top: 0px;
-            right: 0px;
-            transform: translate(0%, 0%) rotate(10deg);
+            top: 0;
+            left: 100%;
+            transform: translate(-100%, 0) rotate(10deg);
             opacity: 1;
-            /* Sichtbar während der Bewegung */
         }
-
+    
         100% {
-            top: 0px;
-            right: 0px;
-            transform: translate(0%, 0%) rotate(10deg);
+            top: 0;
+            left: 100%;
+            transform: translate(-100%, 0) rotate(10deg);
             opacity: 0;
-            /* Unsichtbar am Ende der Animation */
         }
     }
 
