--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -12,7 +12,7 @@
         </svg>
     </div>
     <div class="vokabeln-fragen" [class.vokabeln-richtig]="vokabelnService.isCorrect"
-        [class.vokabeln-falsch]="vokabelnService.isIncorrect">
+        [class.vokabeln-falsch]="vokabelnService.isInCorrect">
 
         <app-vokabeln-fragen></app-vokabeln-fragen>
 
