--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -1,5 +1,5 @@
 section {
-    background-image: url('/assets/img/spanish-761512_1280.jpg');
+    background-image: url('../../assets/img/spanish-761512_1280.jpg');
     background-size: cover;        
     background-repeat: no-repeat;  
     background-position: center;   
