--- a/src/app/main/main.component.scss
+++ b/src/app/main/main.component.scss
@@ -5,7 +5,7 @@ section {
     overflow-x: hidden;
     font-family: cursive;
     background-color: lightblue;
-    background-image: url('/assets/img/book-4109187_1280.png');
+    background-image: url('../../assets/img/book-4109187_1280.png');
     background-repeat: no-repeat;
     background-position: center;
     font-family: cursive, Arial, Helvetica, sans-serif;
